<resources>
    <!-- LaunchActivity -->
    <string name="app_name">Amadeus</string>
    <string name="default_lang">en</string>
    <string name="default_recognition_lang">en-US</string>

    <!-- Settings -->
    <string name="pref_app_settings">Application settings</string>
    <string name="pref_recog_lang">Recognition language</string>
    <string name="pref_recognition_lang_desc">Select voice recognition language</string>
    <string name="pref_lang">Language</string>
    <string name="pref_lang_desc">Select app language (app restart required)</string>
    <string name="pref_subtitles">Show subtitles</string>
    <string name="pref_subtitles_desc">Shows subtitles for Amadeus\' answers</string>

    <!-- Shaman Girls -->
    <string-array name="secret">
        <item>nullpo</item>
    </string-array>

    <!-- Subtitles -->
    <string name="line_hello">Hello.</string>
    <string name="line_dont_call_me_like_that">Don\'t call me like that!</string>
    <string name="line_but_i_refuse">But I refuse.</string>
    <string name="line_devilish_pervert">I never thought you were such a devilish pervert. I guess I misjudged you.</string>
    <string name="line_i_guess">I guess.</string>
    <string name="line_nice">Nice.</string>
    <string name="line_pervert_confirmed">PERVERT CONFIRMED.</string>
    <string name="line_sorry">Sorry.</string>
    <string name="line_sounds_tough">Sounds tough.</string>
    <string name="line_this_guy_hopeless">This guy is hopeless, better do something quick.</string>
    <string name="line_gah">Gah.</string>
    <string name="line_dont_add_tina">Stop adding -tina!</string>
    <string name="line_pervert_idiot_wanttodie">You pervert! Are you an idiot!? Do you wanna die?!</string>
    <string name="line_pleased_to_meet_you">I\'m Makise Kurisu, pleased to meet you.</string>
    <string name="line_who_the_hell_christina">Who the hell is Christina?</string>
    <string name="line_why_christina">I am worried about it. Why am I Christina?</string>
    <string name="line_christina">Christina?</string>
    <string name="line_ask_me_whatever">Ask me whatever you want. I\'ll answer anything I can.</string>
    <string name="line_could_i_help">Um, could I help you with that?</string>
    <string name="line_what_do_you_want">What do you want?</string>
    <string name="line_what_is_it">What is it?</string>
    <string name="line_heheh">Hehehe.</string>
    <string name="line_huh_why_say">Huh? Why do you say that?</string>
    <string name="line_you_sure">You sure?</string>
    <string name="line_nice_to_meet_okabe">Nice to meet you, Okabe Rintaro. I\'m Makise Kurisu.</string>
    <string name="line_look_forward_to_working">I look forward to working with you.</string>
    <string name="line_senpai_question">Anyway, can I ask a question?</string>
    <string name="line_senpai_question_mark">Um… Senpai? Excuse me.</string>
    <string name="line_senpai_what_we_talkin">Hey Senpai, about what we were just talking about…</string>
    <string name="line_senpai_who_is_this">Uh, who is this?</string>
    <string name="line_senpai_please_dont_tell">Senpai, please, don\'t tell the others…</string>
    <string name="line_still_not_happy">I\'m still not happy about that.</string>
    <string name="line_tm_nonsense">That\s pure nonsense.</string>
    <string name="line_tm_not_possible">Let\'s see… My conclusion is that it\'s not possible.</string>
    <string name="line_tm_scientist_no_evidence">That\'s probably because scientists haven\'t discovered something important yet.</string>
    <string name="line_tm_we_dont_know">But we don\'t know for sure that it\'s impossible, I guess.</string>
    <string name="line_tm_you_said">A time machine, you said?</string>
    <string name="line_humans_software">Even humans speak of themselves as a combination of hardware and software, right?</string>
    <string name="line_memory_complex">But memory data isn\'t like normal data. It\'s much more complex.</string>
    <string name="line_secret_diary">I keep a secret diary.</string>
    <string name="line_modifying_memories_impossible">Modifying my memories? It\'s theoretically possible.</string>
    <string name="line_memories_christina">For example, it would be possible to make me think my name was Christina.</string>
    <string name="line_gah_extended">Gah. Ah… Aaaaah.</string>
    <string name="line_Leskinen_awesome">Awesome, he\'s really something!</string>
    <string name="line_Leskinen_nice">Nice!</string>
    <string name="line_Leskinen_oh_no">Oh no!</string>
    <string name="line_Leskinen_shaman">Where are the Japanese shaman girls, Lintahlo?</string>
    <string name="line_Leskinen_holy_cow">Holy Cow! So I said we should come soon</string>
    <string name="line_should_christina">Or should I have introduced myself with, \"It\'s Christina\"?</string>
    <string name="line_nice_to_meet_you">Nice to meet you. I\'m Makise Kurisu</string>
    <string name="line_makise_kurisu_desu">I\'m Makise Kurisu</string>
    <string name="line_ok" translatable="false">OK</string>
    <string name="line_huh">Huh</string>
    <string name="line_hhuh">Hhuh?</string>
    <string name="line_what_are_you_talking_about">What are you talking about?</string>
    <string name="line_why_have_we_met_before">Why? Have we met before?</string>
    <string name="line_time_travel_is_possible_theory_of_relativity">By the way, time travel to the future is available to us right now, according to Einstein\'s special theory of relativity</string>
    <string name="line_came_from_the_future">Are you from the future?</string>
    <string name="line_cosmic_string_definition">A cosmic string is a string shaped \"crevice\" with extreme mass</string>
    <string name="line_cosmic_string_size">The string is a \"crevice\" about as wide as an elementary particle, and at least as long as the diameter of a galaxy</string>
    <string name="line_cosmic_string_distorts_space_time">The string has immense mass, so it distorts space-time. If you were to travel through this distortion, you could make a full circle around the string in less than 360 degrees</string>
    <string name="line_cosmic_string_time_flow">According to the special theory of relativity, time will flow slower for the cosmic string in relation to its surroundings</string>
    <string name="line_cosmic_string_deficit_jump">If you use two cosmic strings, you can do a space deficit jump. If you loop back to your original location, you can return to the same time you started revolving</string>
    <string name="line_cosmic_string_not_superstring">By the way, cosmic strings are not the same as superstrings</string>
    <string name="line_wormholes_tunnel">There are two wormholes joined by a tunnel. No matter how far away the wormholes are, transit time through the tunnel is zero</string>
    <string name="line_wormholes_collapse">The wormhole tunnel suffers from super gravity, and collapses as soon as it opens</string>
    <string name="line_wormholes_stabilizing">If you stabilize the wormhole tunnel with exotic matter injection, instantaneous travel between wormholes becomes possible. To travel through time, however, takes a little more effort</string>
    <string name="line_wormholes_simple">The prerequisites for wormhole travel are simpler than the ones for cosmic string travel</string>
    <string name="line_wormholes_urashima_effect">This still can\'t be called true time travel. It only seems that way. This is called the Urashima effect</string>
    <string name="line_time_travel_impossible">Time travel theories are all just thought experiments. Not one of them can create a viable time machine. That is my answer</string>
    <string name="line_time_travel_other_factors">Even if someone did overcome the logistical requirements, there may be other factors that prevent time travel from working</string>
    <string name="line_paradox_not_family_tree">You can\'t think of it like a sci-fi movie. It\'s not just about your family tree. There are far greater dangers than that</string>
    <string name="line_paradox_danger">Any paradox, no matter how small, would cause the collapse of the causality, the crumble of the theory of relativity, and even the breakdown of all the laws of physics</string>
    <string name="line_paradox_thought_experiment">Paradoxes are nothing more than thought experiments. They cannot occur in reality, and they should not</string>
    <string name="line_paradox_impossible">Nothing that has even a 0.000001%% chance of causing a paradox can happen. The universe won\'t allow it. Wouldn\'t you say this is the logical conclusion?</string>
    <string name="line_who_is_zombie">Who are you calling a zombie?</string>
    <string name="line_you_idiot">You… idiot!</string>
    <string name="line_hentai_thoughts">That creepy grin… are you thinking perverted thoughts again?</string>
    <string name="line_share_knowledge_not_hentai">I don\'t mind lending you my knowledge, but if there is more pervy nonsense involved, the answer is NO</string>
    <string name="line_stop_adding_tina">Stop adding -tina! My name is Kurisu!</string>
    <string name="line_use_my_real_name">I won\'t answer to either. Use my real name</string>
    <string name="line_no_more_hentai">Come on! No more saying \'perv\'! I won\'t treat you like a perv either! So let\'s drop it already!</string>
    <string name="line_eh_yes">Eh… Yes</string>
    <string name="line_doctor_nakabachi">Doctor Nakabachi…</string>
    <string name="line_uh_what">Uh, what?</string>
    <string name="line_when_did_i_become_your_assistant">When did I become your assistant?</string>
    <string name="line_dont_call_me_your_assistant">Don\'t call me your assistant!</string>
    <string name="line_when_did_i_become_your_assistant_2">Hey. When did I become your assistant?</string>
    <string name="line_why_are_you_glaring_at_me">Why are you glaring at me?</string>
    <string name="line_doctor_nakabachi_2">Doctor Nakabachi?</string>
    <string name="line_organization_whats_that">Organization? What\'s that?</string>
    <string name="line_all_is_daijoubu">N-nothing! Really, nothing, okay? Say another word and I hit you!</string>
</resources>