<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/pref_app_settings">
        <SwitchPreference
            android:defaultValue="true"
            android:key="show_subtitles"
            android:summary="@string/pref_subtitles_desc"
            android:title="@string/pref_subtitles" />
        <ListPreference
            android:defaultValue="@string/default_recognition_lang"
            android:entries="@array/languages_recognition_array"
            android:entryValues="@array/languages_recognition_values"
            android:key="recognition_lang"
            android:summary="@string/pref_recognition_lang_desc"
            android:title="@string/pref_recog_lang" />
        <ListPreference
            android:defaultValue="@string/default_lang"
            android:entries="@array/languages_array"
            android:entryValues="@array/languages_values"
            android:key="lang"
            android:summary="@string/pref_lang_desc"
            android:title="@string/pref_lang" />
    </PreferenceCategory>
</PreferenceScreen>